# cooperative-iot-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  codex.md  docker-compose.yml  mosquitto.conf  package-lock.json  report.md  run_local_stack.sh  start_services.bat
.claude/: settings.local.json
.github/: copilot-instructions.md
.run/: mqtt_bridge.sh
archive/: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  env.example  pyproject.toml  requirements.txt  sensors.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  001_initial_schema.py  002_add_technician_auth_columns.py  002_add_user_account_columns.py  003_add_user_email_column.py  004_add_sensor_readings_bundle_columns.py  005_add_sensor_readings_payload_column.py  006_add_user_is_blocked.py
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  mqtt_subscriber.py  realtime.py  schemas.py  seed.py  telemetry.py  ws.py
backend/app/api/: deps.py
backend/app/api/api_v1/: __init__.py  endpoints.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: sensor_reading.py  user.py
backend/app/routers/: __init__.py  admin.py  analyze.py  auth.py  predict.py  prediction_service.py  sensors.py
backend/app/services/: mqtt.py
backend/app/utils/: email_utils.py
backend/cooperative_iot_monitor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  manual.db  test_api_smoke.py
designDocs/: README.md  learning.md  sprints.md
(+136 files in other folders)
