[project]
name = "cooperative-iot-monitor-backend"
version = "0.1.0"
description = "FastAPI backend for the Cooperative IoT Monitor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "python-jose[cryptography]>=3.3.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.0.0",
    "paho-mqtt>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
